# pep

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  noxfile.py  pep.service  pyproject.toml
.github/workflows/: release.yml
aur/: PKGBUILD  pep.install  publish.sh
pep/: __init__.py  config.py  core.py  main.py  tray.py
