[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pep"
version = "0.1.0"
description = "Custom keep-awake system tray tool using systemd-inhibit"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Steven de Jong", email = "steven@example.com"},
]
keywords = ["system", "tray", "awake", "sleep", "inhibit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
]
dependencies = []

[project.scripts]
pep = "pep.main:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "W", "I", "N"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "gi.*"
ignore_missing_imports = true
